--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <style> .gallery { display: flex; flex-wrap: wrap; justify-content: center; } .gallery img { width: 200px; height: auto; margin: 10px; } </style>
 <h1>filtering rubika support admin</h1>
-<p>  hi supportbot admin Please check this account !</p>
+<p>  باسلام و عرض خسته نباشید خدمت ادمین و پشتیبانی گرامی بابت گزارش ارسالی عذر میخواهم اما خود را بعنوان یک کاربر موظف دانسته ام که گزارشی دهم از فردی که از اکانت خود استفاده ننموده و اکانت دیگران است که از روی تاریخچه اکانت میتوانید متوجه بشوید بعلاوه چک کردن مروفایل این شخص که کودک ازاری خشونت و کپی رایت را در بر دارد و بیوگرافی این فرد که کپی رایت است و برای رسیدگی نشدن به اکانت خود گذاشته است و از اسم های غیرقابل خواندن و هرزنامه استفاده می کند و خلاف قوانین است تخلف دیگر که قابل ذکر است گزارش بی رویه بر روی کاربران است و مسدودیت انها و تهدید به فیلترینگ که پیوی اشخاص پیامی ارسال می کند و خود را معرفی کرده و سپس شروع به گزارش بی رویه می کند پیامی که معمولا ارسال می‌کند  این هست:
+I'M DaNnY khorafat- (-MoSiaH-) 
+و از جمله این متن ها که در آن هشتک و ... می‌گذارند  و تهدید به فیلترینگ از انجایی که گفته شد فیلترینگ تنها در دست خود سیستم و پلتفرم روبیکا است خواهش مند است  به این کاربر رسیدگی کنید با تشکر از شما !</p>
 <div class="gallery">
   <img src="image1.jpg" alt="Image 1">
   <img src="image2.jpg" alt="Image 2">
