--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 <title>My Website</title>
 </head>
 <body>
+    <button style="background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;">
+  <a href="https://rubika.ir/mohtavay/JCFICCFEHGDAEBH" style="color: white; text-decoration: none;">Visit Rubika</a>
+</button>
     <style> .gallery { display: flex; flex-wrap: wrap; justify-content: center; } .gallery img { width: 200px; height: auto; margin: 10px; } </style>
 <h1>filtering rubika support admin</h1>
 <p>  باسلام و عرض خسته نباشید خدمت ادمین و پشتیبانی گرامی بابت گزارش ارسالی عذر میخواهم اما خود را بعنوان یک کاربر موظف دانسته ام که گزارشی دهم از فردی که از اکانت خود استفاده ننموده و اکانت دیگران است که از روی تاریخچه اکانت میتوانید متوجه بشوید بعلاوه چک کردن مروفایل این شخص که کودک ازاری خشونت و کپی رایت را در بر دارد و بیوگرافی این فرد که کپی رایت است و برای رسیدگی نشدن به اکانت خود گذاشته است و از اسم های غیرقابل خواندن و هرزنامه استفاده می کند و خلاف قوانین است تخلف دیگر که قابل ذکر است گزارش بی رویه بر روی کاربران است و مسدودیت انها و تهدید به فیلترینگ که پیوی اشخاص پیامی ارسال می کند و خود را معرفی کرده و سپس شروع به گزارش بی رویه می کند پیامی که معمولا ارسال می‌کند  این هست:
