--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;">
-  <a href="https://rubika.ir/mohtavay/JCFICCFEHGDAEBH" style="color: white; text-decoration: none;">Visit Rubika</a>
+  <a href="https://rubika.ir/mohtavay/JCFICCFEHGDAEBH" style="color: white; text-decoration: none;">مدارک و تخلفات کاربر در روبیکا</a>
 </button>
     <style> .gallery { display: flex; flex-wrap: wrap; justify-content: center; } .gallery img { width: 200px; height: auto; margin: 10px; } </style>
 <h1>filtering rubika support admin</h1>
